factored out 'old' code (SerialEntry)